<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ItemEditActivity"
    android:isScrollContainer="true" >
    
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center" >
    
    <LinearLayout
	   	android:focusable="true" android:focusableInTouchMode="true"
	   	android:layout_width="0px" android:layout_height="0px" />

    <LinearLayout android:id="@+id/task_edit_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/header" />

        <EditText
            android:id="@+id/header_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="text" >
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/details" />

        <EditText
            android:id="@+id/details_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date" />
        
        <EditText
            android:id="@+id/due_date_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/urgency" />
        
        <SeekBar
            android:id="@+id/urgency_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:max="100"
            android:progress="1" />
        
	</LinearLayout>
	
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/task_edit_layout"
    	android:layout_alignLeft="@id/task_edit_layout"
    	android:layout_alignRight="@id/task_edit_layout"
    >
	    <Button
	        android:id="@+id/save_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="2dip"
	        android:onClick="onSaveClicked"
	        android:background="@drawable/gradient_button"
	        android:text="@string/save" />
	    
	    <Button
	        android:id="@+id/discard_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="2dip"
	        android:onClick="onDiscardClicked"
	        android:background="@drawable/gradient_button"
	        android:text="@string/discard" />
    
    </LinearLayout>
</RelativeLayout>
</ScrollView>