<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".ItemEditActivity" >
    
    <LinearLayout
    	android:focusable="true" android:focusableInTouchMode="true"
    	android:layout_width="0px" android:layout_height="0px" />

    <LinearLayout android:id="@+id/credentials_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
    	
        <TextView
            android:id="@+id/login_username_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textNoSuggestions" >
        </EditText>

        <TextView
            android:id="@+id/login_username_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
	</LinearLayout>
	
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/credentials_layout"
    	android:layout_alignLeft="@id/credentials_layout"
    	android:layout_alignRight="@id/credentials_layout"
    >
	    <Button
	        android:id="@+id/sign_in"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="2dip"
	        android:onClick="onButtonClicked"
	        android:background="@drawable/gradient_button"
	        android:text="@string/sign_in" 
		/>
	    
	    <Button
	        android:id="@+id/sign_up"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="2dip"
	        android:onClick="onButtonClicked"
	        android:background="@drawable/gradient_button"
	        android:text="@string/sign_up" />
    
    </LinearLayout>
    

</RelativeLayout>